[package]
name = "combine-calamity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "*"
wasm-bindgen = "0.2.63"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.dev.package."*"]
opt-level = 3
