[package]
name = "combine-calamity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy-parallax = "0.2.0"
wasm-bindgen = "0.2.63"
rand = "0.8.5"
serde = "1.0.136"
[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.dev.package."*"]
opt-level = 3
